--- a/pom.xml
+++ b/pom.xml
@@ -77,7 +77,12 @@
             <version>1.18.12</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>javax.enterprise</groupId>
+            <artifactId>cdi-api</artifactId>
+            <version>2.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <!--        <finalName>authenticator-required-action-example</finalName>-->
