--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,19 @@
             <version>2.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- testing -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.192</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <!--        <finalName>authenticator-required-action-example</finalName>-->
@@ -101,6 +114,11 @@
                     <source>8</source>
                     <target>8</target>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.19</version>
             </plugin>
         </plugins>
     </build>
