--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,12 @@
             <version>1.4.200</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>3.2.4</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <!--        <finalName>authenticator-required-action-example</finalName>-->
