--- a/pom.xml
+++ b/pom.xml
@@ -231,7 +231,7 @@
                 <plugin>
                     <groupId>net.revelc.code</groupId>
                     <artifactId>impsort-maven-plugin</artifactId>
-                    <version>1.3.2</version>
+                    <version>1.5.0</version>
                     <configuration>
                         <groups>javax, java, *</groups>
                         <removeUnused>true</removeUnused>
@@ -247,7 +247,7 @@
                 <plugin>
                     <groupId>net.revelc.code.formatter</groupId>
                     <artifactId>formatter-maven-plugin</artifactId>
-                    <version>2.11.0</version>
+                    <version>2.14.0</version>
                     <configuration>
                         <lineEnding>LF</lineEnding>
                         <configFile>eclipse/OpenMRSFormatter.xml</configFile>
@@ -280,8 +280,8 @@
     </build>
 
     <properties>
-        <keycloak.version>11.0.0</keycloak.version>
-        <openmrsPlatformVersion>2.4.0-SNAPSHOT</openmrsPlatformVersion>
+        <keycloak.version>12.0.0</keycloak.version>
+        <openmrsPlatformVersion>2.4.0</openmrsPlatformVersion>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.build.outputEncoding>UTF-8</project.build.outputEncoding>
     </properties>
